# hr-dss

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  HR 의사결정 지원 핵심 Ontology 설계.md  README.md  SETUP.md  docker-compose.yml  entrypoint.sh  hr-prototype-plan-v2.md  package-lock.json  package.json  pnpm-lock.yaml  project-todo.md  pyproject.toml  railway.toml
.claude/: settings.local.json
.claude/agents/: impact-simulator.md  option-generator.md  query-decomposition.md  success-probability.md  validator.md  workflow-builder.md
.claude/skills/capacity-forecast/: SKILL.md
.claude/skills/competency-gap/: SKILL.md
.claude/skills/go-nogo/: SKILL.md
.claude/skills/headcount-analysis/: SKILL.md
.claude/skills/project-cleanup/: SKILL.md
.claude/skills/project-plan/: SKILL.md
.github/workflows/: ci.yml  deploy-cloudflare.yml  release.yml
apps/web/: next.config.js  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AgentEvalDashboard.tsx  ConversationUI.tsx  DataQualityReport.tsx  DocsSidebar.tsx  EvalDashboard.tsx  ExplanationPanel.tsx  GraphViewer.tsx  MarkdownViewer.tsx  OntologyScoreCard.tsx  OptionCompare.tsx
apps/web/lib/: docs.ts
backend/agent_runtime/agents/: __init__.py  impact_simulator.py  option_generator.py  query_decomposition.py  success_probability.py  (+2 more)
backend/api/: __init__.py  config.py  dependencies.py  main.py
data/labeled/: capacity_outcomes.json  project_outcomes.json
data/mock/: assignments.json  decisions.json  forecasts.json  learning.json  opportunities.json  orgs.json  persons.json  projects.json  scorecard_result.json  skills.json  workflows.json
data/schemas/: schema.cypher
docs/: INDEX.md  api-docs.md  project-todo.md  user-guide.md
docs/guides/: phase1-fastapi-implementation.md  phase2-infrastructure-setup.md
docs/reports/: comparison-report.md  poc-final-report.md
docs/specs/: cloudflare-deployment-plan.md  data-catalog.md  data-classification.md  decision-criteria.md  demand-data-spec.md  join-key-standard.md  kpi-acceptance.md  outcome-definition.md  phase1-plan.md  poc-charter.md  question-set.md  skipped-tests-workplan.md  ui-design.md
evals/: README.md  TEST_SCENARIO_DAY6_7.md  TEST_SCENARIO_PLAN.md
evals/rubrics/: _rubric_template.md
evals/schemas/: suite.schema.json  task.schema.json
infra/: cloudflare-secrets.example.env
scripts/: deploy.sh  setup-cloudflare.sh  test_kg_queries.py  test_neo4j_connection.py
tests/: __init__.py  conftest.py  test_api.py  test_day2_data_readiness.py  test_day3_kg.py  test_day4_agents.py  test_day5_workflow.py  test_day6_ui.py  test_day7_validation.py
workers/api-gateway/: package-lock.json  package.json  tsconfig.json  wrangler.toml
(+20 files in other folders)
